--- a/resume-css/style.css
+++ b/resume-css/style.css
@@ -1,7 +1,7 @@
 body {
-  font-family: Work Sans;
+  font-family: filson-pro, sans-serif;
   font-size: 14px;
-  color: rgb(41, 51, 53);
+
 }
 
 .grid {
@@ -20,14 +20,14 @@ body {
 }
 
 h1 {
-  font-family: Lato;
+  font-family: filson-pro, sans-serif;
   font-size: 60px;
   color: rgba(244, 159, 38, 0.9);
 
 }
 h2 {
   margin-top: 5px;
-  font-family: Lato;
+  font-family: filson-pro, sans-serif;
   font-size: 40px;
     color: rgba(232, 159, 38, 0.9);
 }
