--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "filson-pro", sans-serif;
+  font-family: filson-pro, Helvetica, sans-serif;
   font-weight: 100;
   background-color: rgba(228, 238, 216, 0.8);
   color: #231E1D;
